Ajuste subtitulo en el index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </section>
         
             <section id="niveles">
-                <h2 class="niveles__titulo">Niveles de Entrenamiento</h2>
+                <h2 class="niveles__titulo">Niveles</h2>
                 <div class="inicio__niveles-container">
                     <div class="wow animate__slideInLeft container__adultos level" data-wow-duration="1s">
                         <h2 class="niveles__adultos">Entrenamiento para Adultos</h2>
