Ajuste de animaciones en el nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -35,7 +35,7 @@
                 </div>
             </section>
                 
-            <section id="objetivo" class="wow animate__bounceInLeft" data-wow-duration="2s">
+            <section id="objetivo" class="wow animate__backInLeft" data-wow-duration="2s">
                     <div class="wrapper__nosotros">
                     <div class="container__objetivo nosotros__container">
                         <img class="objetivo__img" src="../img/objetivo.jpg" alt="objetivo">
@@ -46,7 +46,7 @@
                     </div>
                 </section>
                     
-                <section id="comienzos" class="wow animate__bounceInRight" data-wow-duration="2s">
+                <section id="comienzos" class="wow animate__backInRight" data-wow-duration="2s">
                     <div class="container__comienzos nosotros__container">
                         <img class="comienzos__img" src="../img/comienzos.jpg" alt="comienzos">
                         <div class="container__item">
